# treker

./: .coverage  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  env_sample  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
githab/workflows/: si.yml
habit/: admin.py  models.py  paginations.py  permissions.py  serializer.py  services.py  tasks.py  tests.py  urls.py  views.py
habit/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
